# StreamBrain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pybind11_cmake.patch  requirements.txt  setup.py  train.py
BCPNN/: __init__.py
BCPNN/backend/: _cpu_base_backend.py  cpu_backend.py  cuda_backend.py  mpi_backend.py  numpy_backend.py
BCPNN/backend/_kernels/: Makefile  kernels_cuda.py  kernels_cuda_internal.cu  kernels_mpi.py  kernels_mpi_internal.cc  kernels_numpy.py  kernels_openmp.py  kernels_openmp_internal.cc  test_cuda.py  test_mpi.py  test_openmp.py  tests.py
BCPNN/backend/full_cuda_backend/: CatalystAdaptor.cpp  CatalystAdaptor.h  Makefile  __init__.py  backend_full_cuda_internals.cu  bcpnn-main.cpp  bcpnn.cu  dataloader.h  dataset.cpp  dataset.h  debug_dump.cpp  debug_inf_nan.cu  get_parameters.cpp  get_parameters.h  helpers_cuda.cpp  helpers_cuda.cu  helpers_cuda.h  helpers_random.h  helpers_training.cu  helpers_training.h  kernels_cuda.h  kernels_naive_cpu.h  main.py  test_runner.cpp  testing.h  testing_cuda_naive_cpu.cu
BCPNN/viz/: image.py  insitu_viz.py
cmake/Modules/: FindMKL.cmake
